--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.6",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.5",
     "aws-cdk": "2.77.0",
+    "esbuild": "^0.19.5",
+    "esbuild-register": "^3.5.0",
+    "jest": "^29.5.0",
+    "npm-check-updates": "^16.14.6",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.77.0",
+    "axios": "^1.5.1",
     "constructs": "^10.0.0",
+    "discord-webhook-node": "^1.1.8",
+    "puppeteer": "^21.3.8",
     "source-map-support": "^0.5.21"
   }
 }
